welcome.lessons.welcome.loopfor.LoopFor.scala.code
nbPas = 0
dejafait = 0

while (!estSurBiscuit) {
	avance()
	
	nbPas = nbPas + 1
	
}
for ( dejafait <- 1 to nbPas ) {
	
	recule()
	
}
